[package]
name = "micro_programming"
version = "0.1.0"
edition = "2021"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0",features=["derive"]}
eframe = "0.16.0"
once_cell = "1.9.0"
[profile.release]
opt-level = 2